# metaphor-skill-agents

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  manifest.yaml
.github/workflows/: release.yml
assets/agents/: code-reviewer.md  debugger.md  doc-writer.md  onboarding-explainer.md  perf-analyzer.md  refactorer.md  security-auditor.md  test-writer.md
assets/claude-md/: type-backend-service.md  type-cli-tool.md  type-crate.md  type-mobileapp.md  type-module.md  workspace-consumer.md  workspace-framework.md
assets/skills/backbone/apps-maintainer/: SKILL.md
assets/skills/backbone/backbone-cli-master/: SKILL.md  reference.md
assets/skills/backbone/backbone-schema-maintainer/: SKILL.md  reference.md
assets/skills/backbone/crate-maintainer/: SKILL.md
assets/skills/backbone/creative-domain-architect/: SKILL.md  reference.md
assets/skills/backbone/custom-logic-specialist/: README.md  skill.md
assets/skills/backbone/database-migration-specialist/: SKILL.md  reference.md
assets/skills/backbone/framework-architect/: SKILL.md  reference.md
assets/skills/backbone/modules-orchestrator/: SKILL.md
assets/skills/generic/cloud-infrastructure-architect/: SKILL.md
assets/skills/generic/commit-generator/: SKILL.md  (+1 more)
assets/skills/generic/tests-maintainer/: Cargo.toml  SKILL.md
assets/skills/generic/tests-maintainer/src/: framework.rs  lib.rs  main.rs  templates.rs  utils.rs
assets/skills/generic/tests-maintainer/templates/: api_test.rs.j2  base_test.rs.j2  common_utils.rs.j2  config.rs.j2  framework_mod.rs.j2  github_workflow.yml.j2  helpers_mod.rs.j2  setup_manager.rs.j2  test_runner.sh.j2
assets/skills/generic/tests-maintainer/testee/: 01-overview.md  02-base-framework.md  03-common-utilities.md  04-test-configuration.md  05-api-test-patterns.md  06-test-runner.md  07-rust-implementation.md  README.md
src/: catalog.rs  lib.rs  main.rs  target.rs
src/commands/: claude.rs  info.rs  init.rs  install.rs  list.rs  mod.rs  remove.rs  update.rs
(+28 files in other folders)
