[package]
name = "metaphor-skill-agents"
version = "0.1.2"
edition = "2021"
description = "Install Claude Code skills and subagents into any project (Metaphor plugin)"
authors = ["Farid Hidayat"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/faridlab/metaphor-skill-agents"
keywords = ["cli", "claude", "skills", "agents", "metaphor"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "metaphor-agent"
path = "src/main.rs"

[lib]
name = "metaphor_skill_agents"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "color"] }
colored = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
include_dir = "0.7"
dirs = "5"
walkdir = "2"
