[package]
name = "tests-maintainer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tests-maintainer"
path = "src/main.rs"

[dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI and file handling
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"

# Template engine
minijinja = { version = "2.0", features = ["loader"] }

# Async support (matching Backbone framework)
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Database and testing support (matching existing SAPIENS tests)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Web testing (matching existing SAPIENS tests)
reqwest = { version = "0.11", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"

# Logging (matching Backbone framework)
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.0"